src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: dark light;
  color: rgba(34, 34, 34, 0.87);
  background-color: #acafaa;
  background: linear-gradient(45deg,
      rgb(176, 238, 174) 0%,
      rgba(148, 187, 233, 1) 100%);

  height: 100vh;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #64ff90;
  text-decoration: inherit;
}

a:hover {
  color: #d4ffa0;
}

input {
  font-family: inherit;
  font-size: 1em;
  font-weight: 500;
  padding: 0.6em 1.2em;
  border-radius: 8px;
  border: 1px solid #c4baac;
  background-color: #f9f9f9;
}

/* body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
} */

.nftFrame {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: auto;
  padding: 32px;
  background-color: #eed2a7;
  border: #c4baac solid;
  border-radius: 3px;
  width: max-content;
}

.nftFrameContainer {
  padding: 32px;
  padding-right: 64px;
  padding-left: 64px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.nftFrame>div {
  display: flex;
  align-content: flex-start;
  color: green;
}

.app {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-top: 32px;
  width: 100%;
}

#promptArea {
  padding: 32px;
  width: 100%;
  align-items: flex-start;
  margin-bottom: 32px;
}

#promptArea>div {
  display: flex;
  flex-direction: column;
  align-items: left;
  padding: 4px;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  cursor: pointer;
  transition: border-color 0.25s;
  width: 100%;
}

.button-secondary {
  background-color: #f9f9f95a;
  color: #4d4d4d;
}

button:hover {
  background: linear-gradient(225deg,
      rgba(176, 238, 174, 0.5) 0%,
      rgba(148, 187, 233, 0.5) 100%);
  border-color: rgba(172, 172, 172, 0.192);
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }

  a:hover {
    color: #747bff;
  }

  button {
    background-color: #f9f9f9;
  }
}

.loading {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 1000;
  background-color: #acafaa85;
  color: #d4ffa0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  padding: 4px;
  padding-left: 8px;
  background-color: #f9f9f942;
  width: 100%;
  text-align: left;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: flex-start;
  font-family: monospace;
  font-size: 1.13em;
}

